# TelemetryOps

./: .gitignore  CMakeLists.txt
data/: telemetry.db-shm  telemetry.db-wal
scripts/: load_test.py
services/aggregator/: CMakeLists.txt  main.cpp
services/controlplane/: CMakeLists.txt  main.cpp
services/ingest/: CMakeLists.txt  main.cpp
